; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-integrator/extr_integrator_cp.c_intcp_flash_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-integrator/extr_integrator_cp.c_intcp_flash_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INTCP_VA_CTRL_BASE = common dso_local global i64 0, align 8
@INTCP_FLASHPROG = common dso_local global i64 0, align 8
@CINTEGRATOR_FLASHPROG_FLWREN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @intcp_flash_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @intcp_flash_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @INTCP_VA_CTRL_BASE, align 8
  %3 = load i64, i64* @INTCP_FLASHPROG, align 8
  %4 = add nsw i64 %2, %3
  %5 = call i32 @readl(i64 %4)
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* @CINTEGRATOR_FLASHPROG_FLWREN, align 4
  %7 = load i32, i32* %1, align 4
  %8 = or i32 %7, %6
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = load i64, i64* @INTCP_VA_CTRL_BASE, align 8
  %11 = load i64, i64* @INTCP_FLASHPROG, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @writel(i32 %9, i64 %12)
  ret i32 0
}

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
